--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "jquery": "^3.7.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
