--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.4.10",
     "jquery": "^3.7.0",
     "next": "13.4.10",
+    "owl.carousel": "^2.3.4",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
