--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.1",
     "classnames": "^2.3.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
@@ -19,6 +19,7 @@
     "owl.carousel": "^2.3.4",
     "postcss": "8.4.26",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
   }
