--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@/components/*": ["app/components/*"]
+      "@/components/*": ["components/*"]
     }
   }
 }
