--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "pobtrust",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://pobtrust.com/dev/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.3.1",
     "classnames": "^2.3.2",
