--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@xmldom/xmldom": "^0.8.10",
     "animate.css": "^4.1.1",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.3.1",
@@ -18,6 +19,7 @@
     "jquery": "^3.7.0",
     "next": "13.4.10",
     "owl.carousel": "^2.3.4",
+    "pizzip": "^3.1.4",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
