--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "jquery": "^3.7.0",
+    "jquery": "^3.7.1",
     "next": "13.4.10",
     "owl.carousel": "^2.3.4",
     "pizzip": "^3.1.4",
@@ -25,5 +25,8 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.26"
   }
 }
